k8s notes/service/clusterIP.yml
apiVersion: v1
kind: Service
metadata: 
  name: backend-svc
spec:
  selector:
    tier: backend
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 80
