k8s notes/service/hostBasedIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exampleingress
spec:
  ingressClassName: nginx
  rules:
  - host: demo.example1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hr-svc
            port:
              number: 80
  - host: demo.example2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finance-svc
            port:
              number: 80
