k8s notes/service/pathBasedIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exampleingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: demo.example.com
    http:
      paths:
      - path: /hr
        pathType: Prefix
        backend:
          service:
            name: hr-svc
            port:
              number: 80  
      - path: /finance
        pathType: Prefix
        backend:
          service:
            name: finance-svc
            port:
              number: 80
